chore: install eslint-plugin-unused-imports package

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint . --fix --max-warnings=0"
+    "lint": "expo lint"
   },
   "dependencies": {
     "expo": "~52.0.11",
@@ -19,11 +19,10 @@
     "@babel/core": "^7.25.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "~18.3.12",
-    "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.4.1",
-    "typescript": "^5.3.3"
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "prettier": "^3.4.1"
   },
   "private": true
 }
