--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@babel/core": "^7.25.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "~18.3.12",
+    "eslint": "^8.57.1",
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-unicorn": "^56.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.4.1"
   },
