feat: configure husky and lint-staged in the app

--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "expo lint",
+      "prettier --write"
+    ],
+    "*.{json,md,js}": "prettier --write"
   },
   "dependencies": {
     "expo": "~52.0.11",
@@ -24,6 +31,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-unicorn": "^56.0.1",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.4.1"
   },
   "private": true
