--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "expo-system-ui": "~4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
