--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "*.{json,md,js}": "prettier --write"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.13",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.5",
     "react": "18.3.1",
-    "react-native": "0.76.3",
-    "expo-system-ui": "~4.0.5"
+    "react-native": "0.76.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
