--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
