--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.14",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
