--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "*.{json,md,js}": "prettier --write"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0"
   },
