feat: configure eas.json for ios simulator build

--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,10 @@
     },
     "preview": {
       "distribution": "internal",
-      "android": { "buildType": "apk" }
+      "android": { "buildType": "apk" },
+      "ios": {
+        "simulator": true
+      }
     },
     "production": {
       "autoIncrement": true
