--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     },
     "ios": {
       "buildNumber": "1.0.0",
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.riyoneri.mealsapp"
     },
     "android": {
       "versionCode": 1,
